2001-12-17  Oliver Kiddle  <opk@zsh.org>

	* 16351: Src/params.c: fix bug in parameter unset code

2001-12-14  Clint Adams  <clint@zsh.org>

        * 16336: Completion/Debian/Type/_deb_packages:
        use apt-cache --generate pkgnames instead of
        apt-cache dumpavail.

        * 16335: Completion/Debian/Command/_apt:
        add -g, --all-names, --recurse, pkgnames, dotty, policy
        completions for apt-cache.

2001-12-11  Clint Adams  <clint@zsh.org>

	* 16327: Completion/Debian/Command/_dpkg: glob for udebs
	as well as debs.

        * 16326: Completion/Unix/Command/_webbrowser,
        Completion/X/Command/.distfiles, Completion/X/Command/_mozilla:
        completion for mozilla, some more web browsers in _webbrowser.

2001-12-11  Oliver Kiddle  <opk@zsh.org>

	* 16322: Completion/Unix/Command/_mtools,
	Completion/Unix/Command/.distfiles: new mtools completion

2001-12-09  Clint Adams  <clint@zsh.org>

        * 16315: Completion/Unix/Command/.distfiles,
        Completion/Unix/Command/_spamassassin: completion for
        spamassassin.

2001-12-06  Oliver Kiddle  <opk@zsh.org>

	* users/4519: Completion/Unix/Command/_zip: complete files
	in all argument positions for zip (bug fix)

2001-11-29  Clint Adams  <clint@zsh.org>

        * 16293: Completion/Unix/Command/.distfiles,
	Completion/Unix/Command/_arping: completion for arping.

        * 16292: Completion/Unix/Command/.distfiles,
        Completion/Unix/Command/_rsync: completion for rsync.

2001-11-26  Clint Adams  <clint@zsh.org>

        * Gergely Nagy: 16291: Completion/Debian/Command/_dupload:
        check ~/.dupload.conf, tweak sed expression to handle hooks.

2001-11-21  Bart Schaefer  <schaefer@zsh.org>

	* 16269: Src/Zle/compctl.c: Use allocated strings when adding
	matches for hash table entries, as the pattern match code may
	attempt to modify them.  (Fixes crash reported in 16235.)
	
	* Sven: 16249: Src/parse.c: Clear pending here-documents upon a
	parse error.
